Inserir página de registro

--- a/src/pages/fale/fale.html
+++ b/src/pages/fale/fale.html
@@ -10,7 +10,7 @@
         <button ion-button menuToggle="">
           <ion-icon name="menu"></ion-icon>
         </button>
-    <ion-title>Fale</ion-title>
+    <ion-title>Fale com Professor</ion-title>
 
   </ion-navbar>
 
