Inserir app agenda escolar com as peges, menu e login

--- a/src/pages/fale/fale.html
+++ b/src/pages/fale/fale.html
@@ -18,5 +18,9 @@
 
 
 <ion-content padding>
-
+    <div>
+        <img src="./assets/imgs/batepapo.png" alt="Grupo de alunos com professor em sala de aula.">
+    </div>
 </ion-content>
+
+
