--- a/src/pages/calendario/calendario.html
+++ b/src/pages/calendario/calendario.html
@@ -10,12 +10,37 @@
         <button ion-button menuToggle="">
           <ion-icon name="menu"></ion-icon>
         </button>
-    <ion-title>calendario</ion-title>
+    <ion-title>Adicionar Eventos</ion-title>
   </ion-navbar>
 
 </ion-header>
 
-
 <ion-content padding>
-
+  <form (ngSubmit)="save()">
+    <ion-list>
+      <ion-item>
+        <ion-label floating>Próximo Evento</ion-label>
+        <ion-input type="text" [(ngModel)]="event.title" name="event.title"></ion-input>
+      </ion-item>
+      <!-- <ion-item>
+        <ion-label floating>Localizaçãon</ion-label>
+        <ion-input type="text" [(ngModel)]="event.location" name="event.location"></ion-input>
+      </ion-item> -->
+      <ion-item>
+        <ion-label floating>Notas</ion-label>
+        <ion-input type="text" [(ngModel)]="event.message" name="event.message"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>Data</ion-label>
+        <ion-datetime displayFormat="DD MMM YYYY" pickerFormat="MM/DD/YYYY" [(ngModel)]="event.startDate" name="event.startDate"></ion-datetime>
+      </ion-item>
+      <!-- <ion-item>
+        <ion-label floating>Data Final</ion-label>
+        <ion-datetime displayFormat="DD MMM YYYY" pickerFormat="MM/DD/YYYY" [(ngModel)]="event.endDate" name="event.endDate"></ion-datetime>
+      </ion-item> -->
+      <ion-item>
+        <button ion-button type="submit" full round>Salvar</button>
+      </ion-item>
+    </ion-list>
+  </form>
 </ion-content>
